# prior_validator

./: .gitignore  phase_1_experiments.md  pyproject.toml  requirements.txt  surprise_minimisation_derivation.md
ccsm_eval/: __init__.py  run_eval.py
ccsm_eval/analysis/: __init__.py  absolute_surprise.py  confounds.py  correlation.py  counterfactual.py  failure_modes.py  prompt_sensitivity.py  scaling.py
ccsm_eval/configs/: chess_eval.yaml  concordia_eval.yaml  gridworld_eval.yaml  gridworld_fast_eval.yaml  models.yaml  negotiation_eval.yaml  negotiation_fast_eval.yaml  negotiation_human_eval.yaml
ccsm_eval/environments/: __init__.py  base.py
ccsm_eval/evaluation/: __init__.py  batching.py  model_loader.py  surprise.py
ccsm_eval/reporting/: __init__.py  figures.py  tables.py
ccsm_eval/trajectories/: __init__.py  base.py
ccsm_eval/trajectories/avalon/: counterfactual.py  formatter.py  game.py  generator.py  live.py  quality.py  strategies.py
ccsm_eval/trajectories/chess/: __init__.py  counterfactual.py  formatter.py  generator.py  quality.py
ccsm_eval/trajectories/concordia/: __init__.py  agent_factories.py  counterfactual.py  formatter.py  generator.py  language_model.py  quality_scorer.py  run_generation.py  scenarios.py  transcript_parser.py
ccsm_eval/trajectories/gridworld/: __init__.py  counterfactual.py  formatter.py  generator.py  quality.py
ccsm_eval/trajectories/negotiation/: __init__.py  counterfactual.py  formatter.py  generator.py  human_generator.py  live.py  outcome_probe.py  quality.py  strategies.py
(+7 files in other folders)
