[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccsm-eval"
version = "0.1.0"
description = "CCSM Phase 1: Prior Quality Validation"
requires-python = ">=3.10"
dependencies = [
    "python-chess>=1.999",
    "stockfish>=3.28.0",
    "torch==2.6.0+cu126",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "anthropic>=0.92.0",
    "openai>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ccsm_eval"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
